--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         .tab-active { border-bottom: 4px solid #2563eb; color: #2563eb; font-weight: 800; }
         .glass-header { background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); border-bottom: 1px solid #e2e8f0; }
         .btn-plus { background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); }
+        button:active { transform: scale(0.95); }
     </style>
 </head>
 <body class="antialiased text-slate-900">
@@ -29,7 +30,7 @@
 
     <div id="pantalla-expediente" class="max-w-md mx-auto min-h-screen hidden">
         <nav class="p-6 glass-header sticky top-0 z-20 flex items-center">
-            <button onclick="irAPantalla('clientes')" class="bg-white border w-10 h-10 rounded-xl flex items-center justify-center mr-4 shadow-sm font-bold">←</button>
+            <button onclick="irAPantalla('clientes')" class="bg-white border w-10 h-10 rounded-xl flex items-center justify-center mr-4 shadow-sm font-bold text-xl">←</button>
             <div id="titulo-cliente" class="flex-1"></div>
         </nav>
         <div class="p-6">
@@ -40,28 +41,44 @@
 
     <div id="pantalla-trabajo" class="max-w-md mx-auto min-h-screen hidden">
         <header class="p-4 bg-white border-b flex justify-between items-center sticky top-0 z-20">
-            <button onclick="irAPantalla('expediente')" class="text-slate-400 font-bold p-2">✕</button>
-            <div id="num-presu-header" class="font-black text-sm text-blue-600 uppercase">OBRA</div>
-            <button onclick="guardarTodo()" class="bg-emerald-500 text-white px-6 py-2 rounded-xl font-bold text-xs uppercase">Guardar</button>
+            <button onclick="irAPantalla('expediente')" class="text-slate-400 font-bold p-2 text-xl">✕</button>
+            <div id="num-presu-header" class="font-black text-sm text-blue-600 uppercase tracking-widest">OBRA</div>
+            <button onclick="guardarTodo()" class="bg-emerald-500 text-white px-6 py-2 rounded-xl font-bold text-xs uppercase tracking-wider">Guardar</button>
         </header>
+        
         <div class="flex bg-white border-b sticky top-[61px] z-20">
             <button id="tab-tecnico" onclick="cambiarVista('tecnico')" class="tab-btn flex-1 py-4 text-xs font-black uppercase tab-active">Mediciones</button>
             <button id="tab-economico" onclick="cambiarVista('economico')" class="tab-btn flex-1 py-4 text-xs font-black uppercase">Presupuesto</button>
         </div>
+
         <div id="vista-tecnico" class="p-6 vista-trabajo">
-            <div class="grid grid-cols-2 gap-3 mb-8" id="botones-materiales">
-                <button onclick="abrirPrompt('tabiques')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left">🧱 Tabiques</button>
-                <button onclick="abrirPrompt('techos')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left">🏠 Techos</button>
-                <button onclick="abrirPrompt('placa13')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left">📄 Placa 13</button>
-                <button onclick="abrirPrompt('montante48')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left">🏗️ Mont. 48</button>
+            <h3 class="text-[10px] font-black text-slate-400 uppercase mb-4 tracking-widest italic">Mano de Obra</h3>
+            <div class="grid grid-cols-2 gap-3 mb-8">
+                <button onclick="abrirPrompt('tabiques')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">🧱 Tabiques</button>
+                <button onclick="abrirPrompt('techos')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">🏠 Techos</button>
+                <button onclick="abrirPrompt('cajones')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">📦 Cajones</button>
+                <button onclick="abrirPrompt('tabicas')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">📐 Tabicas</button>
+                <button onclick="abrirPrompt('cantoneras')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">📏 Cantoneras</button>
+                <button onclick="abrirPrompt('horas')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">⏱️ Horas</button>
+            </div>
+
+            <h3 class="text-[10px] font-black text-blue-500 uppercase mb-4 tracking-widest italic">Materiales</h3>
+            <div class="grid grid-cols-2 gap-3 mb-8">
+                <button onclick="abrirPrompt('placa13')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">📄 Placa 13</button>
+                <button onclick="abrirPrompt('montante48')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🏗️ Mont. 48</button>
+                <button onclick="abrirPrompt('montante70')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🏗️ Mont. 70</button>
+                <button onclick="abrirPrompt('canal48')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🛤️ Canal 48</button>
+                <button onclick="abrirPrompt('canal70')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🛤️ Canal 70</button>
+                <button onclick="abrirPrompt('tc48')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">📏 TC 48</button>
             </div>
             <div id="resumen-medidas-pantalla"></div>
         </div>
+
         <div id="vista-economico" class="p-6 hidden vista-trabajo">
-            <div id="desglose-precios" class="space-y-2"></div>
+            <div id="desglose-precios" class="space-y-3 bg-white p-4 rounded-3xl border shadow-sm"></div>
             <div class="mt-6 pt-6 border-t-2 border-dashed flex justify-between items-center">
-                <span class="font-bold text-slate-400">TOTAL + IVA</span>
-                <span id="total-final" class="text-3xl font-black text-blue-600">0.00€</span>
+                <span class="font-extrabold text-slate-400 text-[10px] uppercase">TOTAL + IVA</span>
+                <span id="total-final" class="text-3xl font-black text-blue-600 tracking-tighter">0.00€</span>
             </div>
         </div>
     </div>
