--- a/index.html
+++ b/index.html
@@ -3,83 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>APPpresupuestos</title>
+    <title>APP Presupuestos</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background: #f8fafc; }
-        .hidden { display: none !important; }
-        .tab-active { border-bottom: 4px solid #2563eb; color: #2563eb; font-weight: 800; }
-        .glass-header { background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); border-bottom: 1px solid #e2e8f0; }
-        .btn-plus { background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); }
-        button:active { transform: scale(0.95); }
+        .hidden { display: none; }
+        .tab-active { border-bottom: 4px solid #2563eb; color: #2563eb; font-weight: bold; }
     </style>
 </head>
-<body class="antialiased text-slate-900">
+<body class="bg-slate-50 text-slate-900">
 
     <div id="pantalla-clientes" class="max-w-md mx-auto min-h-screen">
-        <header class="p-6 glass-header sticky top-0 z-20 flex justify-between items-center">
-            <div>
-                <h1 class="text-[10px] font-extrabold tracking-[0.2em] text-blue-600 uppercase mb-1">Panel</h1>
-                <h2 class="text-2xl font-extrabold tracking-tight">APP<span class="text-blue-600">presupuestos</span></h2>
-            </div>
-            <button onclick="nuevoCliente()" class="btn-plus text-white w-14 h-14 rounded-2xl flex items-center justify-center shadow-lg text-3xl font-bold">+</button>
+        <header class="p-4 bg-white border-b flex justify-between items-center sticky top-0">
+            <h1 class="font-black text-xl">APPpresupuestos</h1>
+            <button onclick="nuevoCliente()" class="bg-blue-600 text-white w-10 h-10 rounded-lg text-2xl">+</button>
         </header>
-        <div id="lista-clientes" class="p-6"></div>
+        <div id="lista-clientes" class="p-4"></div>
     </div>
 
     <div id="pantalla-expediente" class="max-w-md mx-auto min-h-screen hidden">
-        <nav class="p-6 glass-header sticky top-0 z-20 flex items-center">
-            <button onclick="irAPantalla('clientes')" class="bg-white border w-10 h-10 rounded-xl flex items-center justify-center mr-4 shadow-sm font-bold text-xl">←</button>
-            <div id="titulo-cliente" class="flex-1"></div>
+        <nav class="p-4 bg-white border-b flex items-center">
+            <button onclick="irAPantalla('clientes')" class="mr-4 text-xl">←</button>
+            <div id="titulo-cliente" class="font-bold"></div>
         </nav>
-        <div class="p-6">
-            <button onclick="iniciarNuevaMedicion()" class="w-full btn-plus text-white py-4 rounded-2xl font-extrabold uppercase mb-8 shadow-xl">+ Nueva Obra</button>
-            <div id="archivo-presupuestos" class="space-y-4"></div>
+        <div class="p-4">
+            <button onclick="iniciarNuevaMedicion()" class="w-full bg-blue-600 text-white py-3 rounded-lg font-bold mb-4">+ Nueva Obra</button>
+            <div id="archivo-presupuestos"></div>
         </div>
     </div>
 
     <div id="pantalla-trabajo" class="max-w-md mx-auto min-h-screen hidden">
-        <header class="p-4 bg-white border-b flex justify-between items-center sticky top-0 z-20">
-            <button onclick="irAPantalla('expediente')" class="text-slate-400 font-bold p-2 text-xl">✕</button>
-            <div id="num-presu-header" class="font-black text-sm text-blue-600 uppercase tracking-widest">OBRA</div>
-            <button onclick="guardarTodo()" class="bg-emerald-500 text-white px-6 py-2 rounded-xl font-bold text-xs uppercase tracking-wider">Guardar</button>
+        <header class="p-4 bg-white border-b flex justify-between items-center">
+            <button onclick="irAPantalla('expediente')">✕</button>
+            <div id="num-presu-header" class="font-bold">OBRA</div>
+            <button onclick="guardarTodo()" class="bg-green-600 text-white px-4 py-1 rounded">Guardar</button>
         </header>
-        
-        <div class="flex bg-white border-b sticky top-[61px] z-20">
-            <button id="tab-tecnico" onclick="cambiarVista('tecnico')" class="tab-btn flex-1 py-4 text-xs font-black uppercase tab-active">Mediciones</button>
-            <button id="tab-economico" onclick="cambiarVista('economico')" class="tab-btn flex-1 py-4 text-xs font-black uppercase">Presupuesto</button>
+        <div class="flex bg-white border-b">
+            <button id="tab-tecnico" onclick="cambiarVista('tecnico')" class="flex-1 py-3 tab-active">Mediciones</button>
+            <button id="tab-economico" onclick="cambiarVista('economico')" class="flex-1 py-3">Presupuesto</button>
         </div>
-
-        <div id="vista-tecnico" class="p-6 vista-trabajo">
-            <h3 class="text-[10px] font-black text-slate-400 uppercase mb-4 tracking-widest italic">Mano de Obra</h3>
-            <div class="grid grid-cols-2 gap-3 mb-8">
-                <button onclick="abrirPrompt('tabiques')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">🧱 Tabiques</button>
-                <button onclick="abrirPrompt('techos')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">🏠 Techos</button>
-                <button onclick="abrirPrompt('cajones')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">📦 Cajones</button>
-                <button onclick="abrirPrompt('tabicas')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">📐 Tabicas</button>
-                <button onclick="abrirPrompt('cantoneras')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">📏 Cantoneras</button>
-                <button onclick="abrirPrompt('horas')" class="bg-white p-4 rounded-2xl border text-xs font-bold text-left shadow-sm">⏱️ Horas</button>
-            </div>
-
-            <h3 class="text-[10px] font-black text-blue-500 uppercase mb-4 tracking-widest italic">Materiales</h3>
-            <div class="grid grid-cols-2 gap-3 mb-8">
-                <button onclick="abrirPrompt('placa13')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">📄 Placa 13</button>
-                <button onclick="abrirPrompt('montante48')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🏗️ Mont. 48</button>
-                <button onclick="abrirPrompt('montante70')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🏗️ Mont. 70</button>
-                <button onclick="abrirPrompt('canal48')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🛤️ Canal 48</button>
-                <button onclick="abrirPrompt('canal70')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">🛤️ Canal 70</button>
-                <button onclick="abrirPrompt('tc48')" class="bg-blue-50 p-4 rounded-2xl border border-blue-100 text-xs font-bold text-left shadow-sm">📏 TC 48</button>
+        <div id="vista-tecnico" class="p-4">
+            <div class="grid grid-cols-2 gap-2 mb-6">
+                <button onclick="abrirPrompt('tabiques')" class="bg-white p-3 border rounded">🧱 Tabiques</button>
+                <button onclick="abrirPrompt('techos')" class="bg-white p-3 border rounded">🏠 Techos</button>
+                <button onclick="abrirPrompt('cajones')" class="bg-white p-3 border rounded">📦 Cajones</button>
+                <button onclick="abrirPrompt('tabicas')" class="bg-white p-3 border rounded">📐 Tabicas</button>
+                <button onclick="abrirPrompt('cantoneras')" class="bg-white p-3 border rounded">📏 Cantoneras</button>
+                <button onclick="abrirPrompt('horas')" class="bg-white p-3 border rounded">⏱️ Horas</button>
+                <button onclick="abrirPrompt('placa13')" class="bg-blue-50 p-3 border rounded">📄 Placa 13</button>
+                <button onclick="abrirPrompt('montante48')" class="bg-blue-50 p-3 border rounded">🏗️ Mont. 48</button>
+                <button onclick="abrirPrompt('montante70')" class="bg-blue-50 p-3 border rounded">🏗️ Mont. 70</button>
+                <button onclick="abrirPrompt('canal48')" class="bg-blue-50 p-3 border rounded">🛤️ Canal 48</button>
+                <button onclick="abrirPrompt('canal70')" class="bg-blue-50 p-3 border rounded">🛤️ Canal 70</button>
+                <button onclick="abrirPrompt('tc48')" class="bg-blue-50 p-3 border rounded">📏 TC 48</button>
             </div>
             <div id="resumen-medidas-pantalla"></div>
         </div>
-
-        <div id="vista-economico" class="p-6 hidden vista-trabajo">
-            <div id="desglose-precios" class="space-y-3 bg-white p-4 rounded-3xl border shadow-sm"></div>
-            <div class="mt-6 pt-6 border-t-2 border-dashed flex justify-between items-center">
-                <span class="font-extrabold text-slate-400 text-[10px] uppercase">TOTAL + IVA</span>
-                <span id="total-final" class="text-3xl font-black text-blue-600 tracking-tighter">0.00€</span>
-            </div>
+        <div id="vista-economico" class="p-4 hidden">
+            <div id="desglose-precios" class="bg-white p-4 rounded border"></div>
+            <div class="mt-4 text-right font-black text-2xl text-blue-600">Total: <span id="total-final">0.00€</span></div>
         </div>
     </div>
 
